--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xml.etree.ElementTree as ET"
+    "import xml.etree.ElementTree as ET\n",
+    "import pandas "
    ]
   },
   {
