Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET\n",
-    "import pandas "
+    "import pandas as pd"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
